fix host upd ip url
